# UDA-Plugin

./: .gitignore  README.md  package-lock.json  package.json
figma_translation_agent/: .gitignore  README.md
figma_translation_agent/backend/: pyproject.toml
figma_translation_agent/backend/app/agents/: kb_agent.py  llm_agent.py
figma_translation_agent/backend/app/orchestrator/: crew_orchestrator.py
figma_translation_agent/backend/app/services/: kb_service.py  translation_service.py
figma_translation_agent/backend/app/translations/: da.json  es.json  et.json  fi.json  lv.json  no.json  ru.json  se.json
figma_translation_agent/frontend/src/app/components/: single-page.component.css  single-page.component.html  single-page.component.ts
figma_translation_agent/plugin/: build.js  code.js  code.ts  manifest.json  package.json  tsconfig.json  ui.html  webpack.config.js
figma_translation_agent/plugin-backend/: Translator_local.ipynb  requirements.txt
figma_translation_agent/plugin-backend/KB/: merged_translations.json
figma_translation_agent/plugin/agents/: chatAgent.ts  contentFillerAgent.ts  contrastAgent.ts  resizeAgent.js  resizeAgent.ts  translationAgent.ts
figma_translation_agent/plugin/examples/: agentChaining.md
figma_translation_agent/plugin/orchestrator/: agentOrchestrator.js  agentOrchestrator.ts
figma_translation_agent/plugin/shared/: buildFigmaContext.ts  llmClient.js  llmClient.ts
figma_translation_agent/plugin/utils/: types.ts
